[package]
name = "minikv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
clap = {version = "4.5.4", features = ["derive", "env", "color", "string", "cargo"]}
env_logger = "0.11.3"
log = "0.4.21"
actix-web-httpauth = "0.8.1"
serde = {version = "1.0.202", features = ["derive"]}
toml = "0.8.13"
actix-rt = "2.9.0"
